--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cron": "^1.2.1",
     "crypto": "0.0.3",
     "express": "^4.14.0",
+    "immutable": "^3.8.1",
     "jsonwebtoken": "^7.2.1",
     "jspdf": "^1.3.3",
     "mongoose": "^4.7.3",
@@ -52,8 +53,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "mocha": "^3.2.0",
     "node-sass": "^4.0.0",
     "sass-loader": "^4.1.0",
     "style-loader": "^0.13.1",
