--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "pdfkit": "^0.8.0",
     "react": "^15.4.1",
     "react-cookie": "^1.0.4",
-    "react-csv-downloader": "^0.1.4",
+    "react-csv": "^1.0.8",    
     "react-dom": "^15.4.1",
     "react-dropzone": "^3.8.0",
     "react-modal": "^1.6.4",
